@@ -1,4 +1,8 @@
-2011-04-08 Philipp Klaus Krause <pkk AT spth.de>
+2011-04-09 Philipp Klaus Krause <pkk AT spth.de>
+	* src/z80/gen.c:
+	  Added warning in commitPair() for lh to hl assignment.
+
+2011-04-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
 	  Fixed bug that could result in slightly wrong cost function.
